--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: home
 author_profile: true
 ---
-Hello!
+***About me***
+I am a PhD candidate in the Data and Decisions Science Faculty at the Technion - Israel Institute of Technology working on the interaction between Natural Language Processing (NLP), Game Theory, and Decision Making, whats called *Language-based Games*. My advisors are Prof. Roi Reichart and Prof. Moshe Tenneholtz.
