--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 author_profile: true
 ---
-***About me***
+**About me**
 
-I am a PhD candidate in the Data and Decisions Science Faculty at the Technion - Israel Institute of Technology working on the interaction between Natural Language Processing (NLP), Game Theory, and Decision Making, whats called *Language-based Games*. My advisors are Prof. Roi Reichart and Prof. Moshe Tenneholtz.
+I am a PhD candidate in the Data and Decisions Science Faculty at the Technion - Israel Institute of Technology working on language-based games: the interaction between Natural Language Processing (NLP), Game Theory, and Decision Making. My advisors are Prof. Roi Reichart and Prof. Moshe Tenneholtz.
