--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 # layout: home
 layout: single
 author_profile: true
+title: "About me"
 ---
-<strong>About me</strong>
 
 I am a PhD candidate in the Data and Decisions Science Faculty at the Technion - Israel Institute of Technology working on language-based games: the interaction between Natural Language Processing (NLP), Game Theory, and Decision Making. My advisors are Prof. Roi Reichart and Prof. Moshe Tenneholtz.
